--- a/Invoice.html
+++ b/Invoice.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.rtl.min.css"
     integrity="sha384-PRrgQVJ8NNHGieOA1grGdCTIt4h21CzJs6SnWH4YMQ6G5F5+IEzOHz67L4SQaF0o" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" />
-  <link rel="stylesheet" href="Invoce.css" />
+  <link rel="stylesheet" href="Invoice.css" />
 </head>
 
 <body>
@@ -86,7 +86,9 @@
             <div class="col-7 pe-5">
               <div>
                 <h3>توضیحات :</h3>
-                <span id="description">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است، و برای شرایط فعلی تکنولوژی مورد نیاز، و کاربردهای متنوع با هدف بهبو</span>
+                <span id="description">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان
+                  گرافیک است، چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است، و برای شرایط فعلی
+                  تکنولوژی مورد نیاز، و کاربردهای متنوع با هدف بهبو</span>
               </div>
             </div>
             <div class="col-5 pt-3">
@@ -99,7 +101,7 @@
                 <span id="TotalTax">0 تومان</span>
               </div>
               <div class="d-flex justify-content-around align-items-center totalprice">
-                <h5 class="fw-bold d-inline-block">ارزش افزوده :</h5>
+                <h5 class="fw-bold d-inline-block">قیمت کل :</h5>
                 <span id="Totalprice">0 تومان</span>
               </div>
             </div>
@@ -111,7 +113,7 @@
       <div>
         <p>با تشکر از خرید شما <br> حداکثر مهلت پرداخت فاکتور 7 روز پس از تاریخ فاکتور میباشید</p>
       </div>
-      
+
     </footer>
   </div>
 </body>
