change font to digit font

--- a/Invoice.html
+++ b/Invoice.html
@@ -31,7 +31,7 @@
         <div class="col-6 buyer-detail">
           <h4 class="fw-bold mx-2 buyer-lebel">خریدار :</h4>
           <p>
-            <span class="fw-bold" id="buyer-name">فرزاد حیدری</span><br /><span id="buyer-address">خرازی غرب ، آبشار
+            <span class="fw-bold" id="buyer-name">فرزاد حیدری</span><span class="px-2 fw-medium" id="phonenumber">09331990212</span><br /><span id="buyer-address">خرازی غرب ، آبشار
               تهران ، خیابان جدی اردبیلی ، مجتمع اسکان سبز
               ، بلوک کا</span>
           </p>
