--- a/InitInvoice.html
+++ b/InitInvoice.html
@@ -8,6 +8,7 @@
         integrity="sha384-PRrgQVJ8NNHGieOA1grGdCTIt4h21CzJs6SnWH4YMQ6G5F5+IEzOHz67L4SQaF0o" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" />
     <link rel="stylesheet" href="css/InitInvoice.css">
+    <link rel="stylesheet" href="https://unpkg.com/persian-datepicker@1.2.0/dist/css/persian-datepicker.min.css">
 </head>
 
 <body>
@@ -58,7 +59,7 @@
                             <label for="" class="form-label">نوع محصول</label>
                             <select id="ProductType" class="form-select">
                                 <option value="کیلو" selected>کیلو</option>
-                                <option value="تعداد">تعداد</option>
+                                <option value="کارتن">کارتن</option>
                             </select>
                         </div>
                         <div class="col-2">
@@ -84,15 +85,27 @@
             </div>
             <div class="col-12 detail-div my-5">
                 <h3>توضیحات فاکتور</h3>
-                <textarea id="descriptionFactor" class="form-control my-5" maxlength="250"></textarea>
+                <div class="col-6 mx-auto">
+                    <textarea id="descriptionFactor" class="form-control my-5 border-1 border-dark"
+                        maxlength="200"></textarea>
+                </div>
+
             </div>
             <button class="col-6 mx-auto btn btn-success mb-5" onclick="GetInformation()"> دریافت فاکتور</button>
         </div>
     </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://unpkg.com/persian-date@1.1.0/dist/persian-date.min.js"></script>
+<script src="https://unpkg.com/persian-datepicker@1.2.0/dist/js/persian-datepicker.min.js"></script>
 <script>
+    $("#FactorDate").persianDatepicker({
+        initialValue: true,
+        format: 'YYYY/MM/DD',
+        autoClose: true
+    });
 
+    GetEdit();
     checkpriceschange()
     var addbtn = document.getElementById("addproduct")
     addbtn.addEventListener("click", function (e) {
@@ -209,6 +222,21 @@
             $("#Totalypricesfactor").html(splitNumberByThreeDigits(totalnubmer));
         }
     }
+    function GetEdit() {
+        var productdetailclass = document.querySelectorAll(".productdetailclass #ProductPrice")
+        for (var i = 0; i < productdetailclass.length; i++) {
+
+            var elem = productdetailclass[i]
+            var parentId = elem.parentNode.parentNode.id
+            elem.value = splitNumberByThreeDigits(elem.value)
+
+            var count = document.querySelector(`#${parentId} #ProductCount`)
+            var totalprice = document.querySelector(`#${parentId} #ProductTotalPrice`)
+            totalprice.value = splitNumberByThreeDigits(String(Number(numberwithoutsplit(elem.value)) * Number(count.value)))
+            GetTotalyPriceFactor()
+        }
+    }
 </script>
 <script src="js/js.js"></script>
+
 </html>
