--- a/InitInvoice.html
+++ b/InitInvoice.html
@@ -60,6 +60,8 @@
                             <select id="ProductType" class="form-select">
                                 <option value="کیلو" selected>کیلو</option>
                                 <option value="کارتن">کارتن</option>
+                                <option value="بسته">بسته</option>
+                                <option value="غیره">غیره</option>
                             </select>
                         </div>
                         <div class="col-2">
@@ -87,7 +89,8 @@
                 <h3>توضیحات فاکتور</h3>
                 <div class="col-6 mx-auto">
                     <textarea id="descriptionFactor" class="form-control my-5 border-1 border-dark"
-                        maxlength="200"></textarea>
+                        maxlength="200">کارتن ها 8 کیلویی می باشد <br> شماره کارت : 5892101068606124 بانک سپه <br> خانم معصومه بوسلیک
+                    </textarea>
                 </div>
 
             </div>
