--- a/Invoice.html
+++ b/Invoice.html
@@ -15,13 +15,13 @@
     <header class="container-fluid">
       <div class="row">
         <div class="col-8 name-seller">
-          <h1 class="fw-bold">یکتاسوزان</h1>
+          <h1 class="fw-bold">Coco Twenty-One <br> کوکو 21</h1>
         </div>
         <div class="col-4 dateil-seller">
           <div class="detail-seller-blue"></div>
           <div class="detail-seller-text">
-            <h3 class=""><i class="bi bi-fire"></i> ذغال ترکیبی</h3>
-            <p>داری مجوز رسمی اتحادیه<br />شماره تماس : 09335091414</p>
+            <h3 class=""><i class="bi bi-fire"></i> ذغال حبه</h3>
+            <p>داری مجوز رسمی اتحادیه<br />شماره تماس : 09940206590</p>
           </div>
         </div>
       </div>
@@ -31,9 +31,9 @@
         <div class="col-6 buyer-detail">
           <h4 class="fw-bold mx-2 buyer-lebel">خریدار :</h4>
           <p>
-            <span class="fw-bold" id="buyer-name"></span><span class="px-2 fw-medium" id="phonenumber"></span><br /><span id="buyer-address">خرازی غرب ، آبشار
+            <span class="fw-bold" id="buyer-name"></span><br /><span id="buyer-address">خرازی غرب ، آبشار
               تهران ، خیابان جدی اردبیلی ، مجتمع اسکان سبز
-              ، بلوک کا</span>
+              ، بلوک کا</span><br><span class="fw-medium" id="phonenumber"></span>
           </p>
         </div>
         <div class="col-6 d-flex flex-column align-items-end justify-content-around">
@@ -49,7 +49,7 @@
         <div class="col-12">
           <table class="table" id="table">
             <tr>
-              <th>کیلو/ کارتن</th>
+              <th>تعداد</th>
               <th style="padding-left: 70px">نام محصول</th>
               <th style="padding-left: 30px">قیمت</th>
               <th style="padding-left: 30px">قیمت کل</th>
@@ -68,7 +68,7 @@
             <div class="col-5 pt-3">
               <div class="d-flex justify-content-around align-items-center">
                 <h5 class="fw-bold d-inline-block">ارزش افزوده :</h5>
-                <span id="TotalTax">0 تومان</span>
+                <span id="TotalTax">0 ریال</span>
               </div>
               <div class="d-flex justify-content-around align-items-center totalprice">
                 <h5 class="fw-bold d-inline-block">قیمت کل :</h5>
@@ -81,7 +81,7 @@
     </main>
     <footer>
       <div>
-        <p>با تشکر از خرید شما <br> آدرس : اندیشه فاز 1</p>
+        <p>حداکثر مهلت پرداخت فاکتور 24 ساعت پس از تاریخ فاکتور می باشد با تشکر<br> آدرس کارگاه : صفادشت ، شریف آباد</p>
       </div>
 
     </footer>
