update all of pages

--- a/InitInvoice.html
+++ b/InitInvoice.html
@@ -61,6 +61,7 @@
                                 <option value="کیلو" selected>کیلو</option>
                                 <option value="کارتن">کارتن</option>
                                 <option value="بسته">بسته</option>
+                                <option value="بسته">باکس</option>
                                 <option value="غیره">غیره</option>
                             </select>
                         </div>
@@ -89,7 +90,7 @@
                 <h3>توضیحات فاکتور</h3>
                 <div class="col-6 mx-auto">
                     <textarea id="descriptionFactor" class="form-control my-5 border-1 border-dark"
-                        maxlength="200">کارتن ها 8 کیلویی می باشد <br> شماره کارت : 5892101068606124 بانک سپه <br> خانم معصومه بوسلیک
+                        maxlength="200">کارتن ها 6 کیلویی می باشد <br> شماره کارت : 5892101068606124 بانک سپه <br> خانم معصومه بوسلیک
                     </textarea>
                 </div>
 
