--- a/Invoice.html
+++ b/Invoice.html
@@ -21,7 +21,7 @@
           <div class="detail-seller-blue"></div>
           <div class="detail-seller-text">
             <h3 class=""><i class="bi bi-fire"></i> ذغال حبه</h3>
-            <p>داری مجوز رسمی اتحادیه<br />شماره تماس : 09940206590</p>
+            <p>شماره تماس : 09940206590</p>
           </div>
         </div>
       </div>
@@ -81,7 +81,7 @@
     </main>
     <footer>
       <div>
-        <p>حداکثر مهلت پرداخت فاکتور 24 ساعت پس از تاریخ فاکتور می باشد با تشکر<br> آدرس کارگاه : صفادشت ، شریف آباد</p>
+        <p>آدرس : صفادشت ، شریف آباد ، روبروی لاستیک سازان صادق ، کارگاه تولیدی ذغال 21</p>
       </div>
 
     </footer>
